@@ -1,5 +1,5 @@
 #!@SH@
-# $NetBSD: scan,v 1.7 2010/06/15 21:11:43 joerg Exp $
+# $NetBSD: scan,v 1.8 2012/11/23 12:13:35 joerg Exp $
 #
 # Copyright (c) 2007 Joerg Sonnenberger <joerg@NetBSD.org>.
 # All rights reserved.
@@ -40,14 +40,21 @@ if [ "${config_version}" != "@PBULK_CONFIG_VERSION@" ]; then
 	exit 1
 fi
 
+if [ "${reuse_scan_results}" = yes -a -f "${bulklog}.old/meta/pscan" ]; then
+	echo "Using old scan results from ${bulklog}.old/meta/pscan"
+	extra_pscan_args="-L ${bulklog}.old/meta/pscan"
+else
+	extra_pscan_args=""
+fi
+
 if [ -z "${limited_list}" ]; then
 	echo "Scanning..."
 	case "${master_mode}" in
 	[nN][oO])
-		${pscan} -v -M ${make} ${pkgsrc} ${loc}/pscan 2>> ${loc}/pscan.stderr
+		${pscan} -v -M ${make} ${extra_pscan_args} ${pkgsrc} ${loc}/pscan 2>> ${loc}/pscan.stderr
 		;;
 	[yY][eE][sS])
-		${pscan} -v -I ${pscan_start_script} -m ${master_port_scan} -M ${make} ${pkgsrc} ${loc}/pscan 2>> ${loc}/pscan.stderr
+		${pscan} -v -I ${pscan_start_script} -m ${master_port_scan} -M ${make} ${extra_pscan_args} ${pkgsrc} ${loc}/pscan 2>> ${loc}/pscan.stderr
 		;;
 	*)
 		echo "master_mode must be either yes or no."
